upgrade-mule-app: Step-7 fan-out gate, 11.5 metadata coverage check, Java-17 defaults, DW upgrade patterns
This commit rolls up the SKILL.md and helper-script changes that came out of
the 12-app mega-fixture validation run (see sessions/2026-07-27-handoff.md in
mulesoft-dx for the raw findings).

Motivation
----------
Baseline runs showed three recurring failure classes:

1. Step 6 ran Mode-A per connector and Mode-B *once* per connector, not once
   per operation/source used. app-5 lost 10 ops this way; Step 11.5 caught it
   too late (after plan synthesis was already blind on the missing ops).
2. Runtime bump matrix stopped at 4.7.x, so plans targeting Mule 4.8/4.9/4.10
   fell through the switch and quietly emitted a stale mule-maven-plugin
   version.
3. Java-17 upgrade left several DW patterns unhandled (`as Number`,
   `now() + Number`, formatDate locales, Charset defaults, Nashorn, tz IDs),
   which surfaced only at runtime when MUnit tried to boot.

Changes
-------
SKILL.md
- Add scripts table covering all 8 bash scripts + 2 Python helpers so the
  entry points are enumerated up front.
- Replace the earlier "Skip Phase C for no-change connectors" wording with
  a strict "not_in_use is the ONLY pre-Mode-B/C skip" rule; every other
  connector must fan out.
- Add Mode-A vs Mode-B distinction warning + "Describe is NEW-only" callout
  (OLD shape comes from enumerate_usage.sh, not a second describe run).
- Insert the mandatory Step-7 fan-out loop as a paste-verbatim bash block
  that iterates tmp/connector-usage/*.json, generates one describe per op /
  source / (config,provider), skips existing files (idempotent re-run), and
  finishes with a verify_metadata_coverage.sh self-check that hard-fails if
  anything is missing.
- New Step 11.5 (Verify Metadata Coverage) as a defense-in-depth gate
  between Phase B and plan synthesis, so a partially-fanned-out Step 7 can
  loop back rather than corrupt the plan.
- Extend Step 12 with sub-step 2 (rename resolution) tha