@@ -11,8 +11,11 @@ Kept in sync with `scripts/_apply_runtime_bump.py` (`MULE_MAVEN_PLUGIN_MATRIX`).
 | 4.3.x | 3.6.1 | Java 8 only |
 | 4.4.x | 3.8.0 | Java 8, 11 |
 | 4.5.x | 4.1.0 | Java 8, 11, 17 |
-| 4.6.x | 4.3.0 | Java 8, 11, 17 (recommended target) |
+| 4.6.x | 4.3.0 | Java 8, 11, 17 |
 | 4.7.x | 4.4.0 | Java 11, 17 |
+| 4.8.x | 4.6.0 | Java 11, 17 |
+| 4.9.x | 4.9.0 | Java 11, 17 |
+| 4.10.x | 4.10.1 | Java 17 (recommended target) |
 
 ## Java version support windows
 
@@ -23,10 +26,23 @@ Kept in sync with `scripts/_apply_runtime_bump.py` (`MULE_MAVEN_PLUGIN_MATRIX`).
 | 4.5.x | 1.8, 11, 17 |
 | 4.6.x | 1.8, 11, 17 |
 | 4.7.x | 11, 17 |
+| 4.8.x | 11, 17 |
+| 4.9.x | 11, 17 |
+| 4.10.x | 17 |
 
 Notes:
-- The POC target is Mule 4.6.x + Java 17. Bumping straight from 4.3 to 4.7 also works but is more invasive on the runtime side; 4.6 is the safest intermediate stop.
+- Recommended target is Mule 4.10.x + Java 17 (LTS runtime with full Java-17 module-system support). Older intermediate stops (4.6/4.7/4.8/4.9) remain valid if you need to stage the bump.
 - `mule-artifact.json` gains a `javaSpecificationVersions` field starting at Mule 4.5. The runtime bump script adds `["17"]` when the target is Java 17 or 21 and the field is absent.
+- On Java 17, `mule-maven-plugin` still needs a `.mvn/jvm.config` next to `pom.xml` with these `--add-opens` directives so it can reflect into `java.base`:
+  ```
+  --add-opens=java.base/java.lang=ALL-UNNAMED
+  --add-opens=java.base/java.net=ALL-UNNAMED
+  --add-opens=java.base/java.nio=ALL-UNNAMED
+  --add-opens=java.base/java.util=ALL-UNNAMED
+  --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+  --add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED
+  ```
+  Without the last line the packager throws `IllegalAccessError: sun.net.www.protocol.jar.JarURLConnection` on startup.
 
 ## Editing pom.xml properties
 
